Remove disassociate tags during the deletion of topics